--- a/src/app/layout/sidenav.html
+++ b/src/app/layout/sidenav.html
@@ -86,6 +86,10 @@
                         <a [routerLink]="['/',route,ale]">
                                 <span class="fa fa-file-text-o"></span> ALE </a>
                     </li>
+                    <li class="active">
+                        <a [routerLink]="['/',route,aledetails]">
+                                <span class="fa fa-file-text-o"></span> ALE </a>
+                    </li>
                 </ul>
             </li>
 
