--- a/src/assets/js/plugins/select2/css/core.css
+++ b/src/assets/js/plugins/select2/css/core.css
@@ -16,7 +16,7 @@
     user-select: none;
     -webkit-user-select: none;
 }
-
+.select2_search .select2 {width:100% !important;}
 /* line 12, ../scss/_single.scss */
 .select2-container .select2-selection--single .select2-selection__rendered {
     display: block;
