--- a/src/app/layout/sidenav.html
+++ b/src/app/layout/sidenav.html
@@ -88,7 +88,7 @@
                     </li>
                     <li class="active">
                         <a [routerLink]="['/',route,aledetails]">
-                                <span class="fa fa-file-text-o"></span> ALE </a>
+                                <span class="fa fa-file-text-o"></span> ALE Details</a>
                     </li>
                 </ul>
             </li>
