--- a/src/app/EmployeeDemographicsReport/employeeDemographicReport.html
+++ b/src/app/EmployeeDemographicsReport/employeeDemographicReport.html
@@ -39,7 +39,7 @@
 
                                 </div>
 
-                                <div class="col-sm-3">
+                                <div class="col-sm-4">
 
 
                                     <div class="form-group">
@@ -62,8 +62,11 @@
 
 
                                     <div class="form-group">
-                                        <div class="col-sm-2">
+                                        <div class="col-sm-4">
                                             <button class="btn btn-primary" type="button" (click)="Search()">Filter</button>
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
                                         </div>
                                     </div>
                                 </div>
