fixed the issue with the break in service report and the click on the side bar that was taking the user to login screen

--- a/src/app/layout/sidenav.html
+++ b/src/app/layout/sidenav.html
@@ -50,7 +50,7 @@
             <li class="sidebar-label pt30">Menu</li>
 
             <li>
-                <a class="accordion-toggle menu-open" href="#">
+                <a class="accordion-toggle menu-open pointer-events: none;" href="#">
                         <span class="fa fa-tasks"></span>
                         <span class="sidebar-title">User Management</span>
                         <span class="caret"></span>
@@ -68,7 +68,7 @@
             </li>
 
             <li>
-                <a class="accordion-toggle" href="#">
+                <a class="accordion-toggle pointer-events: none;" href="#">
                         <span class="fa fa-dashboard"></span>
                         <span class="sidebar-title">On Boarding</span>
                         <span class="caret"></span>
@@ -96,7 +96,7 @@
 
             <li class="sidebar-label pt25">Data Related</li>
             <li>
-                <a class="accordion-toggle" href="#">
+                <a class="accordion-toggle pointer-events: none;" href="#">
                           <span class="fa fa-share-square-o"></span>
                         <span class="sidebar-title">Data Upload</span>
                         <span class="caret"></span>
@@ -133,7 +133,7 @@
 
             <li>
 
-                <a class="accordion-toggle" href="#">
+                <a class="accordion-toggle pointer-events: none;" href="#">
                         <span class="fa fa-desktop"></span>
                         <span class="sidebar-title">Data View</span>
                         <span class="caret"></span>
@@ -163,7 +163,7 @@
             <li class="sidebar-label pt25">Eligibility</li>
 
                       <li>
-                <a class="accordion-toggle" href="#">
+                <a class="accordion-toggle pointer-events: none;" href="#">
                         <span class="fa fa-wrench"></span>
                         <span class="sidebar-title">Data Portal</span>
                         <span class="caret"></span>
@@ -212,7 +212,7 @@
             <li class="sidebar-label pt25">IRS</li>
 
             <li>
-                <a class="accordion-toggle" href="#">
+                <a class="accordion-toggle pointer-events: none;" href="#">
                         <span class="fa fa-check-square-o"></span>
                         <span class="sidebar-title">Submission</span>
                         <span class="caret"></span>
