--- a/src/app/EmployeeBreakInServiceReport/employeeBreakInServiceReport.html
+++ b/src/app/EmployeeBreakInServiceReport/employeeBreakInServiceReport.html
@@ -90,10 +90,10 @@
                                 </div>
                             </div>
                             <div class="row">
-                                
+
                             </div>
                             <div class="row">
-                               
+
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
     <section id="content" class="table-layout animated fadeIn" *ngIf="dataLoaded">
         <div class="panel panel-visible p20" id="spy3">
             <div class="panel-heading">
-                <div class="panel-title hidden-xs">
+                <div class="panel-title">
                     Report Details
                 </div>
             </div>
