--- a/src/app/ErCoverageReport/erCoverageReport.html
+++ b/src/app/ErCoverageReport/erCoverageReport.html
@@ -34,7 +34,7 @@
                                     </div>
                                 </div>
                                
-                                <div class="col-sm-3">
+                                <div class="col-sm-4">
                                     <div class="form-group">
                                         <label for="ddlcontrolgroup" class="col-sm-5 control-label"><i class="fa fa-group"></i> Control Group</label>
                                         <div class="col-sm-7">
@@ -50,9 +50,16 @@
                                         </div>                                        
                                     </div>
                                 </div>  
-                                <div class="col-sm-3">
+                                <div class="col-sm-4">
+                                    <div class="form-group">
+                                        <div class="col-sm-3">
                                             <button class="btn btn-primary" type="button" (click)="Search()">Filter</button>
-                                 </div>                             
+                                        </div>           
+                                        <div class="col-sm-3">
+                                            <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
+                                        </div>                                  
+                                    </div>
+                                </div>                                    
                             </div>
                             
                             <hr class="short" />
