--- a/src/app/nhftreport/nhftreport.html
+++ b/src/app/nhftreport/nhftreport.html
@@ -49,7 +49,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-3">
+                                <div class="col-sm-4">
                                     <div class="form-group">
                                         <label for="ddlcontrolgroup" class="col-sm-5 control-label"><i class="fa fa-group"></i> Control Group</label>
                                         <div class="col-sm-7">
@@ -67,11 +67,16 @@
                                     </div>
 
                                 </div>  
-                                <div class="col-sm-3">
-                                            <button class="btn btn-primary" type="button" (click)="Search()">Filter</button>
-                                 </div>                             
+                                                     
                             </div>
-                            
+                             <div class="row" style="margin-left: 120px">
+                                   <div class="col-sm-1">
+                                            <button class="btn btn-primary" type="button" (click)="Search()">Filter</button>
+                                 </div> 
+                                <div class="col-sm-1">
+                                    <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
+                                </div>
+                             </div>
                             <hr class="short" />
                             <div class="row">
                                 <div class="col-sm-12">
