--- a/src/app/ControlGroup/controlGroup.html
+++ b/src/app/ControlGroup/controlGroup.html
@@ -57,7 +57,7 @@
                     <div class="col-xs-12">
                     <div class="panel">
                         <div class="panel-custom">
-                               <a href="#"  data-toggle="modal" data-target="#myModalNew" class="btn btn-primary btn-sm ml10 text-right" title="New User">
+                               <a href="#"  data-toggle="modal" data-target="#myModalNew" (click)="clearControlGroupObjectFromForm()" class="btn btn-primary btn-sm ml10 text-right" title="New User">
                                <span class="fa fa-plus pr5"></span> New Control Group</a>
                         </div>
                         <div style="clear: both;"></div>
@@ -185,6 +185,7 @@
                                                             <label for="txtControlGroupEIN" class="col-lg-5 control-label"><h6 class="label-item">Control Group EIN</h6></label>
 														    <input type="text" id="txtControlGroupEIN" formControlName="EINControl" class="form-control" placeholder="EIN...">
                                                         </div>
+                                                        
                                                     </div>
 
 
