--- a/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
+++ b/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
@@ -35,7 +35,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="form-group">
                                             <label for="inputEmail3" class="col-sm-5 control-label"><i class="fa fa-group"></i> Control Group</label>
                                             <div class="col-sm-7">
@@ -55,9 +55,12 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <div class="form-group">
-                                            <div class="col-sm-2">
+                                            <div class="col-sm-4">
                                                 <button class="btn btn-primary" type="submit">Filter</button>
                                             </div>
+                                            <div class="col-sm-3">
+                                                <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
+                                            </div> 
                                         </div>
                                     </div>
                                 </div>
