--- a/src/app/ongoingreport/ogreport.html
+++ b/src/app/ongoingreport/ogreport.html
@@ -18,7 +18,7 @@
                         <div class="form-horizontal">
                             <form novalidate [formGroup]="ogReportForm" (ngSubmit)="Search(ogReportForm.value)">
                                 <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
 
                                         <div class="form-group">
                                             <label for="inputEmail3" class="col-sm-5 control-label"><i class="fa fa-group"></i> Control Group</label>
@@ -75,7 +75,7 @@
 
                                 <div class="row">
 
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="form-group">
                                             <label for="inputPassword3" class="col-sm-5 control-label"><i class="fa fa-dashboard"></i> Type of Hours</label>
                                             <div class="col-sm-7">
@@ -97,6 +97,9 @@
                                             <div class="col-sm-2">
                                                 <button class="btn btn-primary" type="submit">Filter</button>
                                             </div>
+                                           <div class="col-sm-3">
+                                            <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
